2006-06-29  Bruno Haible  <bruno@clisp.org>

	* configure.ac: New file.
	* Makefile.am (AUTOMAKE_OPTIONS): Drop gnits, use foreign instead.
	* po/Makefile.am (POTFILES): Remove examples/ prefix.

2006-06-27  Bruno Haible  <bruno@clisp.org>

	* hello-c/{autoclean.sh,m4/Makefile.am}: Remove isc-posix.m4.
	* hello-c-gnome/{autoclean.sh,m4/Makefile.am}: Likewise.
	* hello-c++/{autoclean.sh,m4/Makefile.am}: Likewise.
	* hello-c++-gnome/{autoclean.sh,m4/Makefile.am}: Likewise.
	* hello-c++-kde/{autoclean.sh,m4/Makefile.am}: Likewise.
	* hello-objc/{autoclean.sh,m4/Makefile.am}: Likewise.
	* hello-objc-gnome/{autoclean.sh,m4/Makefile.am}: Likewise.

2006-04-14  Bruno Haible  <bruno@clisp.org>

	Assume autoconf >= 2.60.
	* Makefile.am (docdir): Remove variable.
	* po/Makefile.am (localedir): Remove variable.

2006-06-04  Bruno Haible  <bruno@clisp.org>

	* hello-c/{autoclean.sh,m4/Makefile.am}: Replace inttypes.m4 with
	inttypes-h.m4.
	* hello-c-gnome/{autoclean.sh,m4/Makefile.am}: Likewise.
	* hello-c++/{autoclean.sh,m4/Makefile.am}: Likewise.
	* hello-c++-gnome/{autoclean.sh,m4/Makefile.am}: Likewise.
	* hello-c++-kde/{autoclean.sh,m4/Makefile.am}: Likewise.
	* hello-objc/{autoclean.sh,m4/Makefile.am}: Likewise.
	* hello-objc-gnome/{autoclean.sh,m4/Makefile.am}: Likewise.

2006-05-01  Bruno Haible  <bruno@clisp.org>

	* hello-java/configure.ac: Pass a source-version to gt_JAVACOMP. Move
	gt_JAVAEXEC call before the gt_JAVACOMP call.
	* hello-java-awt/configure.ac: Likewise.
	* hello-java-swing/configure.ac: Likewise.

2006-04-17  Bruno Haible  <bruno@clisp.org>

	* Makefile.am: Use $(mkdir_p) instead of $(mkinstalldirs).
	* hello-csharp/Makefile.am: Likewise.
	* hello-csharp-forms/Makefile.am: Likewise.
	* hello-java/Makefile.am: Likewise.
	* hello-java-awt/Makefile.am: Likewise.
	* hello-java-swing/Makefile.am: Likewise.
	* hello-pascal/Makefile.am: Likewise.
	* hello-c++-qt/po/Makefile.am: Likewise.
	* hello-c++-wxwidgets/po/Makefile.am: Likewise.