@@ -3,4 +3,4 @@
 # This file is in the public domain.
 #
 # Set of available languages.
-af ca de el es fr ga hu it ja nl pl pt ro ru sk sl sr sv tr uk vi zh_CN zh_TW
+af ca de el eo es fr ga hu it ja nl pl pt ro ru sk sl sr sv tr uk vi zh_CN zh_TW
