@@ -1,3 +1,11 @@
+2006-07-03  Bruno Haible  <bruno@clisp.org>
+
+	* po/eo.po: New file, from Edmund Grimley Evans <edmundo@rano.org>.
+	* po/it.po: Update from Marco Colombo <m.colombo@ed.ac.uk>.
+	* po/LINGUAS: Add eo.
+	* hello-*/po/LINGUAS: Update.
+	* Makefile.am (EXAMPLESFILES): Add the new message catalogs.
+
 2006-06-29  Bruno Haible  <bruno@clisp.org>
 
 	* configure.ac: New file.
